added yaml loader

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pyyaml==3.12
 schematics==2.0.1
 sqlalchemy==1.1.14
 -e git://github.com/Rapptz/discord.py.git@5013102574916c4c9d8a9ebe17f8b9ff963f2005#egg=discord
